Bug 433288 - Calligraphy tool does not correctly follow a transformed vector object/shape
Summary: Calligraphy tool does not correctly follow a transformed vector object/shape
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools/Vector (other bugs)
Version First Reported In: 5.2.6
Platform: Debian stable Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-02-20 05:58 UTC by graycube
Modified: 2024-11-14 14:11 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description graycube 2021-02-20 05:58:48 UTC
If you build any shape with the rectangle tool, ellipse tool, polygon tool or polyline tool and skew it or rotate it, the calligraphy tool's follow selected path option will not work properly. Even after converting the shapes to path.
Comment 1 Ahab Greybeard 2021-02-20 10:13:37 UTC
SUMMARY
I can Confirm this for appimages 4.3.0 onwards to the Feb 19 5.0.0 prealpha (git 35ed4b7)

First noted in: https://forum.kde.org/viewtopic.php?f=288&t=170139

If the Calligraphy Tool is used with the 'Follow selected path' option, on any vector object or shape that has been transformed, the resulting calligraphy shape does not have the transform that was applied to the vector object/shape.
(The vector object/shape could have been transformed by using the Select Shapes Tool and then manipulating the control handles or by using the Transform Tool.)

STEPS TO REPRODUCE
1. Create a vector object/shape.
2. Transform it in some way by use of the control handles when it's selected or by use of the Transform Tool.
3. Select the vector object/shape.
4. Use the Calligraphy Tool with 'Follow selected path' to paint around the vector object/shape.

OBSERVED RESULT
4. The painted calligraphy shape follows the untransformed path of the vector object/shape while being painted and remains as that when completed.

EXPECTED RESULT
4. The final painted calligraphy shape should follow the transformed path of the vector object shape.

ADDITIONAL INFORMATION
A workaround (limited to the case of only one vector object/shape on a layer) is to apply the transform by using a Transform Mask. In this case, the painted calligraphy shape follows the untransformed vector object/shape path and then, when completed, is transformed to the correct final shape.

SOFTWARE
Krita

 Version: 5.0.0-prealpha (git 35ed4b7)
 Languages: en_GB, en, en, en_GB, en
 Hidpi: false

Qt

  Version (compiled): 5.12.9
  Version (loaded): 5.12.9

OS Information

  Build ABI: x86_64-little_endian-lp64
  Build CPU: x86_64
  CPU: x86_64
  Kernel Type: linux
Comment 2 Vitamorus 2024-11-14 08:11:38 UTC
Re-confirmed for 5.2.6.
Comment 3 Vitamorus 2024-11-14 10:29:31 UTC
Additionally, 'Follow selected path' breaks and becomes misaligned if you use the Move tool to move the shape instead of the Select Shapes tool. That doesn't seem like a desirable effect.
Comment 4 Dmitry Kazakov 2024-11-14 14:10:38 UTC
Git commit 79c8127bc8fb2c32963c8e6b510142b4fc53d589 by Dmitry Kazakov.
Committed on 14/11/2024 at 14:10.
Pushed by dkazakov into branch 'krita/5.2'.

Fix following existing shape in the Calligraphy Tool

M  +2    -3    plugins/tools/karbonplugins/tools/CalligraphyTool/KarbonCalligraphyTool.cpp

https://invent.kde.org/graphics/krita/-/commit/79c8127bc8fb2c32963c8e6b510142b4fc53d589
Comment 5 Dmitry Kazakov 2024-11-14 14:11:46 UTC
Git commit 063b4d386ae0773c8abe60b5d31cbb25cffa93ef by Dmitry Kazakov.
Committed on 14/11/2024 at 14:11.
Pushed by dkazakov into branch 'master'.

Fix following existing shape in the Calligraphy Tool

M  +2    -3    plugins/tools/karbonplugins/tools/CalligraphyTool/KarbonCalligraphyTool.cpp

https://invent.kde.org/graphics/krita/-/commit/063b4d386ae0773c8abe60b5d31cbb25cffa93ef