Fix following existing shape in the Calligraphy Tool

BUG:433288